fixing some media query alignment

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -59,4 +59,8 @@
     .l-heading {
         font-size: 2rem;
     }
+
+    #main-footer .footer-container ul{
+        padding-left: 40px;
+    }
 }
